changes in getPanelPreferences to get both adjournment and s&l panel preferences